--- a/HackerRank Statistics/Day_0_Mean_Median_Mode.ipynb
+++ b/HackerRank Statistics/Day_0_Mean_Median_Mode.ipynb
@@ -2,11 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 49,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-04-20T03:35:46.340290Z",
-     "start_time": "2021-04-20T03:35:46.208449Z"
+     "end_time": "2021-04-20T06:49:40.156166Z",
+     "start_time": "2021-04-20T06:49:38.662455Z"
     }
    },
    "outputs": [],
@@ -14,26 +14,27 @@
     "import numpy as np\n",
     "import random\n",
     "import math\n",
-    "import statistics as stats"
+    "import statistics as stats\n",
+    "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 92,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-04-20T03:35:46.359555Z",
-     "start_time": "2021-04-20T03:35:46.340290Z"
+     "end_time": "2021-04-20T07:05:13.888043Z",
+     "start_time": "2021-04-20T07:05:13.880152Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[36379, 60608, 79058, 7555, 64535, 45889, 42608, 5903, 5191, 45158]"
+       "[87009, 14874, 12046, 4506, 29299, 19634, 74815, 6343, 20141, 18259]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -241,30 +242,235 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 20,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-04-20T03:35:46.599689Z",
-     "start_time": "2021-04-20T03:35:46.487430Z"
+     "end_time": "2021-04-20T06:30:10.419592Z",
+     "start_time": "2021-04-20T06:30:10.415059Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "from collections import Counter"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-04-20T07:36:18.957390Z",
+     "start_time": "2021-04-20T07:36:18.948893Z"
+    },
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[87009, 14874, 12046, 4506, 29299, 19634, 74815, 6343, 20141, 18259]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[(87009, 1)]"
+      ]
+     },
+     "execution_count": 104,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(lst)\n",
+    "c = Counter(lst)\n",
+    "# return a list with a tuple of (observation, count)\n",
+    "c.most_common(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-04-20T07:43:51.949910Z",
+     "start_time": "2021-04-20T07:43:51.942349Z"
     }
    },
    "outputs": [
     {
-     "ename": "StatisticsError",
-     "evalue": "no unique mode; found 10 equally common values",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mStatisticsError\u001b[0m                           Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-11-6fc18d479646>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mstats\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmode\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlst\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m~\\anaconda3\\envs\\learn-env\\lib\\statistics.py\u001b[0m in \u001b[0;36mmode\u001b[1;34m(data)\u001b[0m\n\u001b[0;32m    505\u001b[0m     \u001b[1;32melif\u001b[0m \u001b[0mtable\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    506\u001b[0m         raise StatisticsError(\n\u001b[1;32m--> 507\u001b[1;33m                 \u001b[1;34m'no unique mode; found %d equally common values'\u001b[0m \u001b[1;33m%\u001b[0m \u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtable\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    508\u001b[0m                 )\n\u001b[0;32m    509\u001b[0m     \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mStatisticsError\u001b[0m: no unique mode; found 10 equally common values"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(87009, 1)\n",
+      "1\n"
      ]
     }
    ],
    "source": [
-    "stats.mode(lst)"
+    "# index ino the list\n",
+    "print(c.most_common(1)[0])\n",
+    "print(c.most_common(1)[0][1])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 126,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-04-20T07:46:21.576439Z",
+     "start_time": "2021-04-20T07:46:21.572951Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "c.items()\n",
+    "kv = []\n",
+    "for k,v in c.items(): # k is the observation, v is the count of the observation\n",
+    "    if v == c.most_common(1)[0][1]: # if the count of an observation == that of the most common observation\n",
+    "        kv.append(k) # append that observation to the empty list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 127,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-04-20T07:46:21.904368Z",
+     "start_time": "2021-04-20T07:46:21.886362Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[87009, 14874, 12046, 4506, 29299, 19634, 74815, 6343, 20141, 18259]"
+      ]
+     },
+     "execution_count": 127,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "kv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-04-20T07:05:26.697922Z",
+     "start_time": "2021-04-20T07:05:26.674754Z"
+    },
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[87009, 14874, 12046, 4506, 29299, 19634, 74815, 6343, 20141, 18259]"
+      ]
+     },
+     "execution_count": 94,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def find_mode(arr):\n",
+    "    c = Counter(arr)\n",
+    "    return [k for k,v in c.items() if v == c.most_common(1)[0][1]]\n",
+    "find_mode(lst)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-04-20T07:07:53.997930Z",
+     "start_time": "2021-04-20T07:07:53.994544Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[4506, 6343, 12046, 14874, 18259, 19634, 20141, 29299, 74815, 87009]"
+      ]
+     },
+     "execution_count": 100,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sorted(find_mode(lst))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-04-20T07:08:05.643862Z",
+     "start_time": "2021-04-20T07:08:05.635846Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4506"
+      ]
+     },
+     "execution_count": 101,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sorted(find_mode(lst))[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-04-20T07:09:52.939649Z",
+     "start_time": "2021-04-20T07:09:52.932635Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4506"
+      ]
+     },
+     "execution_count": 102,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def find_mode(arr):\n",
+    "    c = Counter(arr)\n",
+    "    return sorted([k for k,v in c.items() if v == c.most_common(1)[0][1]])[0]\n",
+    "find_mode(lst)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
