added day 0 answer

--- a/HackerRank Statistics/Day_0_Mean_Median_Mode.ipynb
+++ b/HackerRank Statistics/Day_0_Mean_Median_Mode.ipynb
@@ -466,6 +466,111 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Answer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "10\n",
+    "64630 11735 14216 99233 14470 4978 73429 38120 51135 67060"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 146,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-04-20T08:08:42.447194Z",
+     "start_time": "2021-04-20T08:08:42.439209Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Enter your code here. Read input from STDIN. Print output to STDOUT\n",
+    "import statistics as stats\n",
+    "from collections import Counter\n",
+    "\n",
+    "def m_med_mode(n, arr):\n",
+    "    c = Counter(arr)\n",
+    "    m = print(sum(arr)/n)\n",
+    "    med = print(stats.median(arr))\n",
+    "    mode = print(sorted([k for k,v in c.items() if v == c.most_common(1)[0][1]])[0])\n",
+    "    return (m,med,mode)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 147,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-04-20T08:08:42.681472Z",
+     "start_time": "2021-04-20T08:08:42.665511Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "43900.6\n",
+      "44627.5\n",
+      "4978\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(None, None, None)"
+      ]
+     },
+     "execution_count": 147,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "m_med_mode(10, [64630, 11735, 14216, 99233, 14470, 4978, 73429, 38120, 51135, 67060])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 153,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-04-20T08:13:51.457069Z",
+     "start_time": "2021-04-20T08:13:39.795911Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "64630 11735 14216 99233 14470 4978 73429 38120 51135 67060\n",
+      "43900.6\n",
+      "44627.5\n",
+      "4978\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(input())\n",
+    "arr = list(map(int, input().split()))\n",
+    "c = Counter(arr)\n",
+    "m = print(sum(arr)/n)\n",
+    "med = print(stats.median(arr))\n",
+    "mode = print(sorted([k for k,v in c.items() if v == c.most_common(1)[0][1]])[0])"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
