added rough answer

--- a/replace_with_alphabet_position.ipynb
+++ b/replace_with_alphabet_position.ipynb
@@ -121,52 +121,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 66,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-04-21T03:55:38.582004Z",
-     "start_time": "2021-04-21T03:55:38.563110Z"
+     "end_time": "2021-04-21T05:31:44.371177Z",
+     "start_time": "2021-04-21T05:31:44.362201Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{1: 'a',\n",
-       " 2: 'b',\n",
-       " 3: 'c',\n",
-       " 4: 'd',\n",
-       " 5: 'e',\n",
-       " 6: 'f',\n",
-       " 7: 'g',\n",
-       " 8: 'h',\n",
-       " 9: 'i',\n",
-       " 10: 'j',\n",
-       " 11: 'k',\n",
-       " 12: 'l',\n",
-       " 13: 'm',\n",
-       " 14: 'n',\n",
-       " 15: 'o',\n",
-       " 16: 'p',\n",
-       " 17: 'q',\n",
-       " 18: 'r',\n",
-       " 19: 's',\n",
-       " 20: 't',\n",
-       " 21: 'u',\n",
-       " 22: 'v',\n",
-       " 23: 'q',\n",
-       " 24: 'x',\n",
-       " 25: 'y',\n",
-       " 26: 'z'}"
+       "{'a': 1,\n",
+       " 'b': 2,\n",
+       " 'c': 3,\n",
+       " 'd': 4,\n",
+       " 'e': 5,\n",
+       " 'f': 6,\n",
+       " 'g': 7,\n",
+       " 'h': 8,\n",
+       " 'i': 9,\n",
+       " 'j': 10,\n",
+       " 'k': 11,\n",
+       " 'l': 12,\n",
+       " 'm': 13,\n",
+       " 'n': 14,\n",
+       " 'o': 15,\n",
+       " 'p': 16,\n",
+       " 'q': 23,\n",
+       " 'r': 18,\n",
+       " 's': 19,\n",
+       " 't': 20,\n",
+       " 'u': 21,\n",
+       " 'v': 22,\n",
+       " 'x': 24,\n",
+       " 'y': 25,\n",
+       " 'z': 26}"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "alpha_num_alpha = dict(zip(alpha_num, alpha))\n",
+    "alpha_num_alpha = dict(zip(alpha, alpha_num))\n",
     "alpha_num_alpha"
    ]
   },
@@ -186,26 +185,260 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 75,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-04-21T04:45:34.653544Z",
-     "start_time": "2021-04-21T04:45:34.627844Z"
+     "end_time": "2021-04-21T06:21:22.369986Z",
+     "start_time": "2021-04-21T06:21:22.359095Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['t',\n",
+       " ',',\n",
+       " 'h',\n",
+       " ',',\n",
+       " 'e',\n",
+       " ',',\n",
+       " ' ',\n",
+       " ',',\n",
+       " 's',\n",
+       " ',',\n",
+       " 'u',\n",
+       " ',',\n",
+       " 'n',\n",
+       " ',',\n",
+       " 's',\n",
+       " ',',\n",
+       " 'e',\n",
+       " ',',\n",
+       " 't',\n",
+       " ',',\n",
+       " ' ',\n",
+       " ',',\n",
+       " 's',\n",
+       " ',',\n",
+       " 'e',\n",
+       " ',',\n",
+       " 't',\n",
+       " ',',\n",
+       " 's',\n",
+       " ',',\n",
+       " ' ',\n",
+       " ',',\n",
+       " 'a',\n",
+       " ',',\n",
+       " 't',\n",
+       " ',',\n",
+       " ' ',\n",
+       " ',',\n",
+       " 't',\n",
+       " ',',\n",
+       " 'w',\n",
+       " ',',\n",
+       " 'e',\n",
+       " ',',\n",
+       " 'l',\n",
+       " ',',\n",
+       " 'v',\n",
+       " ',',\n",
+       " 'e',\n",
+       " ',',\n",
+       " ' ',\n",
+       " ',',\n",
+       " 'o',\n",
+       " ',',\n",
+       " \"'\",\n",
+       " ',',\n",
+       " ' ',\n",
+       " ',',\n",
+       " 'c',\n",
+       " ',',\n",
+       " 'l',\n",
+       " ',',\n",
+       " 'o',\n",
+       " ',',\n",
+       " 'c',\n",
+       " ',',\n",
+       " 'k',\n",
+       " ',',\n",
+       " '.']"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "t = len(list(','.join(text).lower()))"
+    "t = list(','.join(text).lower())\n",
+    "t"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 76,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-04-21T06:21:53.425115Z",
+     "start_time": "2021-04-21T06:21:53.412150Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'t'"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "t[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-04-21T05:28:34.621595Z",
+     "start_time": "2021-04-21T05:28:34.613616Z"
+    },
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys([1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26])"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "alpha_num_alpha.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-04-21T06:24:09.987832Z",
+     "start_time": "2021-04-21T06:24:09.972998Z"
+    }
+   },
    "outputs": [],
    "source": [
+    "lit = []\n",
     "for l in t:\n",
-    "    if l == "
+    "    lit.append(l.replace(l, str(alpha_num_alpha.keys())))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-04-21T06:32:48.727662Z",
+     "start_time": "2021-04-21T06:32:48.709040Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "arr = []\n",
+    "new_text = text.lower()\n",
+    "for i in list(new_text):\n",
+    "    for k, j in alpha_num_alpha.items():\n",
+    "        if k == i:\n",
+    "            arr.append(j)\n",
+    "# print(' '.join(arr))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-04-21T06:32:52.300664Z",
+     "start_time": "2021-04-21T06:32:52.290716Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[20,\n",
+       " 8,\n",
+       " 5,\n",
+       " 19,\n",
+       " 21,\n",
+       " 14,\n",
+       " 19,\n",
+       " 5,\n",
+       " 20,\n",
+       " 19,\n",
+       " 5,\n",
+       " 20,\n",
+       " 19,\n",
+       " 1,\n",
+       " 20,\n",
+       " 20,\n",
+       " 5,\n",
+       " 12,\n",
+       " 22,\n",
+       " 5,\n",
+       " 15,\n",
+       " 3,\n",
+       " 12,\n",
+       " 15,\n",
+       " 3,\n",
+       " 11]"
+      ]
+     },
+     "execution_count": 85,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-04-21T06:20:14.927461Z",
+     "start_time": "2021-04-21T06:20:14.922475Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['t', ' ', 'h', ' ', 'e', ' ', ' ', ' ', 's', ' ', 'u', ' ', 'n', ' ', 's', ' ', 'e', ' ', 't', ' ', ' ', ' ', 's', ' ', 'e', ' ', 't', ' ', 's', ' ', ' ', ' ', 'a', ' ', 't', ' ', ' ', ' ', 't', ' ', 'w', ' ', 'e', ' ', 'l', ' ', 'v', ' ', 'e', ' ', ' ', ' ', 'o', ' ', \"'\", ' ', ' ', ' ', 'c', ' ', 'l', ' ', 'o', ' ', 'c', ' ', 'k', ' ', '.']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# textt = text\n",
+    "\n",
+    "for letter, index in alpha_num_alpha.items():\n",
+    "    textt = list(' '.join(text).lower())\n",
+    "    ttextt = str(textt).replace(letter.lower(), str(index))\n",
+    "print(ttextt)"
    ]
   },
   {
