added video code-along link

--- a/pOOP_in_10.ipynb
+++ b/pOOP_in_10.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Code-Along from [Bro Code](https://www.youtube.com/watch?v=q2SGW2VgwAM&ab_channel=BroCode)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
