tested class object

--- a/pOOP_in_10.ipynb
+++ b/pOOP_in_10.ipynb
@@ -18,7 +18,7 @@
    },
    "outputs": [],
    "source": [
-    "# from modeule import class\n",
+    "# from module import class\n",
     "class Car:\n",
     "#     constructor = intit method constructs objects for us [self must be at least one of the aruguement parameters]\n",
     "    def __init__(self, make, model, year, color):\n",
@@ -28,6 +28,7 @@
     "        self.year = year\n",
     "        self.color = color\n",
     "#     methods(argument) self is the object using the method\n",
+    "# nothing needs to be passed in as 'self'\n",
     "    def drive(self):\n",
     "        print(\"This car is driving.\")\n",
     "    def stop(self):\n",
@@ -36,10 +37,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 4,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-05-12T02:30:50.814954Z",
+     "start_time": "2021-05-12T02:30:50.798995Z"
+    }
+   },
    "outputs": [],
-   "source": []
+   "source": [
+    "car_1 = Car('Lexus', 'RX350', 2021, 'olive')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-05-12T02:33:18.479332Z",
+     "start_time": "2021-05-12T02:33:18.467791Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Lexus'"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "car_1.make"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-05-12T02:33:18.712914Z",
+     "start_time": "2021-05-12T02:33:18.698953Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "olive\n",
+      "2021\n",
+      "Lexus\n",
+      "RX350\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(car_1.color)\n",
+    "print(car_1.year)\n",
+    "print(car_1.make)\n",
+    "print(car_1.model)"
+   ]
   }
  ],
  "metadata": {
