--- a/CodeWars/total_amount_of_points.ipynb
+++ b/CodeWars/total_amount_of_points.ipynb
@@ -20,13 +20,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 33,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-04-26T22:52:13.883526Z",
+     "start_time": "2021-04-26T22:52:13.862430Z"
+    }
+   },
    "outputs": [],
    "source": [
     "def point(games):\n",
     "    total = []\n",
+    "    for z in games:\n",
+    "        if z[0] > z[2]:\n",
+    "            total.append(3)\n",
+    "        elif z[0] < z[2]:\n",
+    "            total.append(0)\n",
+    "        elif z[0] == z[2]:\n",
+    "            total.append(1)\n",
+    "    return sum(total)\n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-04-26T22:52:41.569703Z",
+     "start_time": "2021-04-26T22:52:41.561677Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "30"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "point(points)"
    ]
   },
   {
@@ -70,10 +108,137 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-04-26T22:39:23.829927Z",
+     "start_time": "2021-04-26T22:39:23.819476Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'1'"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "points[0][0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-04-26T22:43:08.114394Z",
+     "start_time": "2021-04-26T22:43:08.102426Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "total = []\n",
+    "for x in points:\n",
+    "    if x[0] > x[2]:\n",
+    "        total.append(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-04-26T22:43:08.761027Z",
+     "start_time": "2021-04-26T22:43:08.752500Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[3, 3, 3, 3, 3, 3, 3, 3, 3, 3]"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "total"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-04-26T22:40:16.081298Z",
+     "start_time": "2021-04-26T22:40:16.075314Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(total)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-04-26T22:43:18.001578Z",
+     "start_time": "2021-04-26T22:43:17.986517Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "30"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sum(total)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def points(games):\n",
+    "    result = 0\n",
+    "    for i in games:\n",
+    "        j = i.split(':')\n",
+    "        if j[0] > j[1]:\n",
+    "            result+=3\n",
+    "        elif j[0] == j[1]:\n",
+    "            result += 1\n",
+    "    return result"
+   ]
   }
  ],
  "metadata": {
